Implementing the Modal

--- a/index.html
+++ b/index.html
@@ -8,7 +8,14 @@
     </head>
     <body>
         <h1>Pokedex</h1>
-        <ul class="pokemon-list"></ul>
+        <ul id="show-modal" class="pokemon-list"></ul>
+        <div id="modal-container">
+            <!-- <div class="modal">
+              <button class="modal-close">Close</button>
+              <h1>Modal title</h1>
+              <p>Modal text</p>       
+            </div> -->
+          </div>
         <strong>
         <script src="js/promise-polyfill.js"></script>
         <script src="js/fetch-polyfill.js"></script>
