--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <h1>Pokedex</h1>
-        <ul id="show-modal" class="pokemon-list"></ul>
+        <ul id="show-modal" class="pokemon-list list-group"></ul>
         <div id="modal-container"></div>
         <strong>
         <script src="js/promise-polyfill.js"></script>
